<resources>
    <string name="app_name">Ai4Access</string>
    <string name="redefining_accessible_classrooms">Redefining Accessible CLASSROOMS</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_any_account_sign_up">Don’t have any account ? <font color="#A57C14"> Sign Up</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="i_already_have_an_account_sign_up">I already have an account ? <font color="#A57C14">Sign Up</font></string>
    <string name="login">Login</string>
    <string name="email1_hint">vangogh@mail.com</string>
    <string name="password_hint">min 8 character</string>
    <string name="i_am_a">I am a ...</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="or">or</string>
</resources>