<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Login1Fragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:src="@drawable/login1_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="68dp"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="@+id/btn_back"
                app:layout_constraintTop_toBottomOf="@+id/btn_back" />

            <EditText
                android:id="@+id/editText_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edtxt_bg"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/email1_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_medium"
                android:shadowColor="@color/white"
                android:text="@string/email"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edtxt_bg"
                android:drawableStart="@drawable/baseline_visibility_off_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:shadowColor="@color/white"
                android:text="@string/password"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/editText_mail"
                app:layout_constraintTop_toBottomOf="@+id/editText_mail" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/white"
                android:padding="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@+id/editText_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editText_password"
                app:layout_constraintTop_toBottomOf="@+id/editText_password" />

            <TextView
                android:id="@+id/txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:shadowColor="@color/white"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="24dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:shadowColor="@color/white"
                android:text="@string/i_already_have_an_account_sign_up"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>